# PINNo

./: .buildinfo  .gitignore  README.md  api_reference.html  genindex.html  gui.py  index.html  main.py  modules.html  objects.inv  pinno.gui_modules.html  pinno.html  py-modindex.html  pyproject.toml  requirements.txt  run_desktop.py  run_web.py  search.html  searchindex.js  temp_model.keras
_modules/: index.html
_modules/pinno/: config.html  data_manage.html  gui_desktop.html  gui_web.html  losses.html  models.html  physics.html  training.html
_sources/: index.rst.txt  pinno.rst.txt
docs/source/: api_reference.rst  conf.py  index.rst  modules.rst
gui_modules/: components.py  data_explorer.py  report_tab.py  training_tab.py
pinno/: cli.py  config.py  data_manage.py  gui_desktop.py  gui_web.py  losses.py  models.py  physics.py  training.py
pinno/gui_modules/: data_explorer.py  info_tab.py  report_tab.py  training_tab.py
pinno/pinno_UD.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pinno_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
results/Simple_Harmonic_Oscillator_20251009_122203/: best_weights.weights.h5  checkpoint  ckpt-5.data-00000-of-00001  ckpt-5.index  ckpt-6.data-00000-of-00001  ckpt-6.index  ckpt-7.data-00000-of-00001  ckpt-7.index  final_weights.weights.h5
scr/: train.py
src/: config.py  data_manage.py  losses.py  models.py  physics.py  training.py  visualization.py
tests/: conftest.py  test_core.py  test_data_losses.py  test_models.py  test_physics.py  test_structure_nn.py
(+14 files in other folders)
